tests/negative/Numeric.tst

int number()
{
	int a = 4_r;
	float f = 5.0_z;

	return 0;
}

========

error: invalid integer suffix: r
error: invalid float suffix: z
found 2 errors
